2013-07-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Accept multiple options to --autolabel
	  argument.

2013-07-18  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Undo previous patch.
	* device-src/s3-device.c: Verify the bucket can be used as a subdomain
	  if S3-SUBDOMAIN is set.

2013-07-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: lowercase the bucket for the auth_string.

2013-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Typo.

2013-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c: register types at initialization.

2013-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Remove from correct queue.

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Changes in 3.3.4
	* VERSION: 3.3.4

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix use of NULL dereference.

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c (holding_cleanup_dir): fclose pid_FILE.

2013-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Keep a current_slot by config.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Fix perl warning.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set barcode in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set chg in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: Set LPRFLAG.

2013-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c, server-src/planner.c: Call holding_cleanup.
	* server-src/holding.c: ignore tmp file, add pid file in holding disk
	  to prevent parallel use.

2013-06-25  Jean-Louis Martineau <martineau@zmanda.com>